lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:3: error: not found: value setPouseeDesiree
	setPouseeDesiree(4);
        ^